# ChatBot_GenAI

./: .gitignore  LLM_USER_SIMULATOR_PLAN.md  PERSONA_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  README.md  SCENARIO_IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt
app/: CURRENT_DATE_IMPLEMENTATION_SUMMARY.md  CURRENT_DATE_SUPERVISOR_GUIDE.md  LOGGING_README.md  TOOL_VERIFICATION_SUMMARY.md  create_tables.sql  db_Tech.sql  logging_config.py  main.py  new_version_db_Tech.sql  test_db_connection.py  test_report.md  test_sched_agent.py
app/agents/: __init__.py  agents.py
app/modules/: EVALUATION_SYSTEM_SUMMARY.md  README_EVALUATION.md  bot_architecture.py  conversation_ending_data_shuffled.jsonl  conversation_evaluator.py  end_convr_train.py  prepare_turns2k.py  run_evaluation.py  test_report.md  train_openai_via_api.py
app/utils/: __init__.py  utils.py
data/: turns2k_bert.csv
demo_reports/: report_20250709_202815.json  report_20250709_202919.html  report_20250709_202919.json
demo_results/: test_results_20250709_202517.json  test_results_20250709_202815.json  test_results_20250709_202919.json
streamlit/: streamlit_app.py
tests/: __init__.py
tests/automation/: batch_monitor.py  test_reporter.py  test_runner.py
tests/examples/: date_handling_demo.py  demo_personas.py  full_conversation_test.py  log_parsing_demo.py  phase4_automation_demo.py  scenario_demo.py  test_scenarios.py
tests/logs_parser/: __init__.py  flow_extractor.py  flow_validator.py
tests/user_simulator/: __init__.py  (+6 more)
